[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/shader-effects/ripple/ripple.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/shader-effects/ripple-source/ripple-source.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/interactables/portal/sprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/interactables/portal/portal.gd" type="Script" id=4]
[ext_resource path="res://assets/sound-effects/portal/portal.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sound-effects/portal/portal_prox.ogg" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[node name="Portal" type="Node2D"]
z_index = -1
script = ExtResource( 4 )
min_distance = 8.0
max_distance = 64.0
ripples = ExtResource( 1 )

[node name="OneEnd" type="Area2D" parent="."]
position = Vector2( 22, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="RippleSource" parent="OneEnd" instance=ExtResource( 2 )]
speed = 2.0
radius = 32.0
amplitude = 5.0
pulses = 2.0

[node name="PortalSprite" parent="OneEnd" instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OneEnd"]
visible = false
shape = SubResource( 1 )

[node name="OtherEnd" type="Area2D" parent="."]
position = Vector2( -22, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="RippleSource" parent="OtherEnd" instance=ExtResource( 2 )]
speed = 2.0
radius = 32.0
amplitude = 5.0
pulses = 2.0

[node name="PortalSprite" parent="OtherEnd" instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OtherEnd"]
visible = false
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
<<<<<<< HEAD
volume_db = 7.0
=======
volume_db = 5.0
>>>>>>> db37f5f5dde7bed071313fcaab35bed5339ab3fb
mix_target = 2
bus = "SFX"

[node name="PROX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 3.0
pitch_scale = 1.45
mix_target = 2
bus = "SFX"
[connection signal="body_entered" from="OneEnd" to="." method="on_one_end_body_entered"]
[connection signal="body_entered" from="OtherEnd" to="." method="on_other_end_body_entered"]
